add bucket sort

--- a/erlang_code/sort/Makefile
+++ b/erlang_code/sort/Makefile
@@ -13,7 +13,8 @@ MODS = sort_funcs \
 	insertion_sort \
 	selection_sort \
 	heap_sort \
-	quick_sort
+	quick_sort \
+	bucket_sort
 
 all: compile
 
