add breadth first search

--- a/erlang_code/graph/Makefile
+++ b/erlang_code/graph/Makefile
@@ -9,8 +9,8 @@
 ERL = erl -boot start_clean
 
 MODS = brute_force \
-			 depth_first_search
-
+			 depth_first_search \
+			 breadth_first_search
 
 all: compile
 
