--- a/erlang_code/graph/Makefile
+++ b/erlang_code/graph/Makefile
@@ -10,7 +10,8 @@ ERL = erl -boot start_clean
 
 MODS = brute_force \
 			 depth_first_search \
-			 breadth_first_search
+			 breadth_first_search \
+			 dikjstras_algorithm
 
 all: compile
 
