--- a/erlang_code/Makefile
+++ b/erlang_code/Makefile
@@ -15,10 +15,12 @@ compile: ${MODS:%=%.beam} subdirs
 subdirs:
 	cd sort; make; cd ..
 	cd search; make; cd ..
-	cd graph; make
+	cd graph; make; cd ..
+	cd route_search; make
 
 clean:
 	rm -fr *.beam erl_crash.dump
 	cd sort; make clean; cd ..
 	cd search; make clean; cd ..
-	cd graph; make clean
+	cd graph; make clean; cd ..
+	cd route_search; make clean
