--- a/erlang_code/route_search/Makefile
+++ b/erlang_code/route_search/Makefile
@@ -12,7 +12,8 @@ MODS = minimax \
 	negmax \
 	alpha_beta \
 	depth_first_search \
-	breadth_first_search
+	breadth_first_search \
+  aster
 
 all: compile
 
