add minimum cost

--- a/erlang_code/network_flow/Makefile
+++ b/erlang_code/network_flow/Makefile
@@ -10,7 +10,8 @@ ERL = erl -boot start_clean
 
 MODS = ford_fullkerson \
   ford_fullkerson_with_breadth_first \
-  biporate_matching
+  biporate_matching \
+  minimum_cost
 
 all: compile
 
