add convex hull scan

--- a/erlang_code/Makefile
+++ b/erlang_code/Makefile
@@ -17,7 +17,8 @@ subdirs:
 	cd search; make; cd ..
 	cd graph; make; cd ..
 	cd route_search; make; cd ..
-	cd network_flow; make
+	cd network_flow; make; cd ..
+	cd computational_geometry; make
 
 clean:
 	rm -fr *.beam erl_crash.dump
@@ -25,5 +26,5 @@ clean:
 	cd search; make clean; cd ..
 	cd graph; make clean; cd ..
 	cd route_search; make clean; cd ..
-	cd network_flow; make clean
-
+	cd network_flow; make clean; cd ..
+	cd computational_geometry; make clean
